# luawrapper

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  luawrapperutil.hpp
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
cmake/lua/: CMakeLists.txt
include/: luawrapper.hpp  luawrapperutil.hpp
test/: BankAccount.cpp  BankAccount.hpp  CMakeLists.txt  Example.cpp  Example.hpp  LuaBankAccount.cpp  LuaBankAccount.hpp  LuaCustomTypes.hpp  LuaExample.cpp  LuaExample.hpp  Vector2D.hpp  example2.lua  main.cpp
test/example2/: README  main.cpp
tests/: BankAccount.cpp  example1.lua  main.cpp
